# entangled_hydron

./: .gitignore  .gitmodules  CMakeLists.txt  learning_theory.txt
include/: colony.h  database.h  hydron.h  learning_theory.h  random_number_generator.h  synapse.h
include/debug/: log.h
include/learning_theory/: colony_joint.h  feed_learning.h  keep_current.h  learning_theory.h
src/: CMakeLists.txt  colony.cc  database.cc  hydron.cc  learning_theory.cc  main.cc  random_number_generator.cc  synapse.cc
src/learning_theory/: colony_joint.cc  feed_learning.cc  keep_current.cc  learning_theory.cc
